@@ -36,7 +36,6 @@
 -T ACCESS_DESCRIPTION
 -T ADDED_OBJ
 -T AES_KEY
--T APP_INFO
 -T ARGS
 -T ASIdOrRange
 -T ASIdOrRanges
@@ -586,7 +585,6 @@
 -T STACK_OF_nid_triple_
 -T STACK_OF_void_
 -T LHASH_OF_ADDED_OBJ_
--T LHASH_OF_APP_INFO_
 -T LHASH_OF_CONF_VALUE_
 -T LHASH_OF_ENGINE_PILE_
 -T LHASH_OF_ERR_STATE_
